--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^9.99.0",
+    "@react-three/fiber": "^8.15.0",
+    "@react-three/postprocessing": "^2.15.0",
+    "@react-spring/three": "^9.7.3",
     "@tailwindcss/postcss": "^4.1.11",
     "@tanstack/react-query": "^5.84.2",
     "chart.js": "^4.5.0",
@@ -21,6 +25,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
     "tailwind-merge": "^3.3.1",
+    "three": "^0.160.0",
     "zod": "^4.0.17"
   },
   "devDependencies": {
@@ -28,6 +33,7 @@
     "@types/node": "^24.2.1",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
+    "@types/three": "^0.160.0",
     "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.32.0",
